refactor: replace Argument usage with String